<resources>
    <string name="app_name">Curriculum Vitae</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_btn">Login</string>
    <string name="str_skills">Skills</string>
    <string name="str_works">Works</string>
    <string name="str_projects">Projects</string>
    <string name="str_educations">Education backgrounds</string>
    <string name="str_weaknesses">Weaknesses</string>
    <string name="str_strengths">Strengths</string>
    <string name="student_id">Student ID</string>
    <string name="student_name">Name:</string>
    <string name="title">Title:</string>


    <string name="student_E">Enkhtsetseg Ganbaatar</string>
    <string name="student_B">Oyunbold Ganbold</string>
    <string name="student_N">Norovdorj Otgonbayar</string>
    <string name="student_G">Ganzorig Bayarsaikhan</string>

    <string name="student_E_id">612722</string>
    <string name="student_B_id">612734</string>
    <string name="student_N_id">612743</string>
    <string name="student_G_id">612696</string>

    <string name="student_E_title">Mobile Developer</string>
    <string name="student_B_title">Full Stack Developer</string>
    <string name="student_N_title">Data Engineer</string>
    <string name="student_G_title">Front End Developer</string>
</resources>