<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ActivityAbout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:gravity="top"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/g_pic"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:shape="ring"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ganzo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="15dp">


                <TextView
                    android:id="@+id/g_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/student_G" />

                <TextView
                    android:id="@+id/g_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="12dp"
                    android:textStyle="normal"
                    android:text="@string/student_G_id" />

                <TextView
                    android:id="@+id/g_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/student_G_title" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/e_pic"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/enkhee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="15dp">


                <TextView
                    android:id="@+id/e_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/student_E" />

                <TextView
                    android:id="@+id/e_text2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="monospace"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="12dp"
                    android:textStyle="normal"
                    android:text="@string/student_E_id" />

                <TextView
                    android:id="@+id/e_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/student_E_title" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/b_pic"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="15dp">


                <TextView
                    android:id="@+id/b_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/student_B" />

                <TextView
                    android:id="@+id/b_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="12dp"
                    android:textStyle="normal"
                    android:text="@string/student_B_id" />

                <TextView
                    android:id="@+id/b_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/student_B_title" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/n_pic"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/noro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="15dp">


                <TextView
                    android:id="@+id/n_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:text="@string/student_N" />

                <TextView
                    android:id="@+id/n_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="12dp"
                    android:textStyle="normal"
                    android:text="@string/student_N_id" />

                <TextView
                    android:id="@+id/n_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/student_N_title"
                    android:fontFamily="cursive"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>